--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,12 @@
     <!-- Page Header Start -->
     <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
-            <h1 class="display-1 text-white animated slideInDown">Contact Us</h1>
+            <h1 class="display-1 text-white animated slideInDown">Contatos</h1>
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">Pages</a></li>
-                    <li class="breadcrumb-item text-primary active" aria-current="page">Contact Us</li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Início</a></li>
+                    <li class="breadcrumb-item"><a class="text-white" href="#">Serviços</a></li>
+                    <li class="breadcrumb-item text-primary active" aria-current="page">Contatos</li>
                 </ol>
             </nav>
         </div>
@@ -88,8 +88,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h4 class="section-title">Contact Us</h4>
-                <h1 class="display-5 mb-4">If You Have Any Query, Please Feel Free Contact Us</h1>
+                <h4 class="section-title">Contatos</h4>
+                <h1 class="display-5 mb-4">Entre em contato conosco!</h1>
             </div>
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -99,8 +99,8 @@
                                 <i class="fa fa-map-marker-alt text-primary"></i>
                             </div>
                             <div class="ms-4">
-                                <p class="mb-2">Address</p>
-                                <h3 class="mb-0">123 Street, New York, USA</h3>
+                                <p class="mb-2">Endereço</p>
+                                <h3 class="mb-0">Avenida Coronel - Av. Carlos Orleans Guimarães, 113 - Várzea, Lagoa Santa - MG, 33400-000</h3>
                             </div>
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4 mb-4">
@@ -108,8 +108,8 @@
                                 <i class="fa fa-phone-alt text-primary"></i>
                             </div>
                             <div class="ms-4">
-                                <p class="mb-2">Call Us Now</p>
-                                <h3 class="mb-0">+012 345 6789</h3>
+                                <p class="mb-2">Telefone</p>
+                                <h3 class="mb-0">+55 31 3681-0276</h3>
                             </div>
                         </div>
                         <div class="bg-light d-flex align-items-center w-100 p-4">
@@ -117,42 +117,42 @@
                                 <i class="fa fa-envelope-open text-primary"></i>
                             </div>
                             <div class="ms-4">
-                                <p class="mb-2">Mail Us Now</p>
-                                <h3 class="mb-0">info@example.com</h3>
+                                <p class="mb-2">E-mail</p>
+                                <h3 class="mb-0">gnvidros@gmail.com</h3>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                    <p class="mb-4">A sua vidraçaria em Lagoa Santa e região! <a href="https://htmlcodex.com/contact-form">Entre em contato</a>.</p>
                     <form>
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
+                                    <label for="name">Nome</label>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <label for="email">E-mail</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
+                                    <label for="subject">Projeto</label>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                    <label for="message">Message</label>
+                                    <label for="message">Menssagem</label>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                <button class="btn btn-primary w-100 py-3" type="submit">Enviar</button>
                             </div>
                         </div>
                     </form>
@@ -165,22 +165,23 @@
 
     <!-- Google Map Start -->
     <div class="container-xxl pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
-        <iframe class="w-100 mb-n2" style="height: 450px;"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-            frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        
+
+            <iframe class="w-100 mb-n2" style="height: 450px;"src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d120243.84039589927!2d-43.96737610450871!3d-19.643536639893682!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0xa67c151415ae91%3A0x6c83d13857c05486!2sAvenida%20Coronel%20-%20Av.%20Carlos%20Orleans%20Guimar%C3%A3es%2C%20113%20-%20V%C3%A1rzea%2C%20Lagoa%20Santa%20-%20MG%2C%2033400-000!3m2!1d-19.6435554!2d-43.8849744!5e0!3m2!1spt-BR!2sbr!4v1736947050797!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <!-- Google Map End -->
 
 
+   
     <!-- Footer Start -->
-    <div class="container-fluid bg-dark text-body footer pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid bg-dark text-body footer mt-5 pt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Address</h3>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>info@example.com</p>
+                    <h3 class="text-light mb-4">Endereço</h3>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt text-primary me-3"></i>Avenida Coronel - Av. Carlos Orleans Guimarães, 113 - Várzea, Lagoa Santa - MG, 33400-000</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt text-primary me-3"></i>+55 31 3681-0276</p>
+                    <p class="mb-2"><i class="fa fa-envelope text-primary me-3"></i>gnvidros@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-body me-1" href=""><i class="fab fa-facebook-f"></i></a>
@@ -189,20 +190,20 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Services</h3>
-                    <a class="btn btn-link" href="">Architecture</a>
-                    <a class="btn btn-link" href="">3D Animation</a>
-                    <a class="btn btn-link" href="">House Planning</a>
-                    <a class="btn btn-link" href="">Interior Design</a>
-                    <a class="btn btn-link" href="">Construction</a>
+                    <h3 class="text-light mb-4">Serviços</h3>
+                    <a class="btn btn-link" href="">Guarda-corpos</a>
+                    <a class="btn btn-link" href="">Fachadas</a>
+                    <a class="btn btn-link" href="">Vidros Temperados ou Espelhos</a>
+                    <a class="btn btn-link" href="">Box para Banheiros</a>
+                    <a class="btn btn-link" href="">Outros Serviços</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
-                    <h3 class="text-light mb-4">Quick Links</h3>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
-                    <a class="btn btn-link" href="">Terms & Condition</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <h3 class="text-light mb-4">Links Rápidos</h3>
+                    <a class="btn btn-link" href="">Início</a>
+                    <a class="btn btn-link" href="">Sobre</a>
+                    <a class="btn btn-link" href="">Serviços</a>
+                    <a class="btn btn-link" href="">Contatos</a>
+                    <a class="btn btn-link" href="">Orçamentos</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Newsletter</h3>
@@ -218,11 +219,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
+                        &copy; <a href="https://avantconsultoriadigital.com.br/" target="blank">2025 Todos os direitos reservados</a>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
+                       Feito por <a href="https://avantconsultoriadigital.com.br/" target="_blank">Avant Digital</a>
                     </div>
                 </div>
             </div>
@@ -231,14 +232,15 @@
     <!-- Footer End -->
 
 
+   
     <!--Floating WhatsApp and Instagram buttons -->
     <div class="floating-buttons">
-        <a href="https://wa.me/+553136810276" target="_blank" class="whatsapp-btn">
-         <i class="fa fa-whatsapp"></i>
-        </a>
-        <a href="https://www.instagram.com/gn_vidrosls/" target="_blank" class="instagram-btn">
-         <i class="fa fa-instagram"></i>
-        </a>
+      <a href="https://wa.me/+553136810276" target="_blank" class="whatsapp-btn">
+       <i class="fa fa-whatsapp"></i>
+      </a>
+      <a href="https://www.instagram.com/gn_vidrosls/" target="_blank" class="instagram-btn">
+       <i class="fa fa-instagram"></i>
+      </a>
     </div>
     <!--End Floating WhatsApp and Instagram buttons -->
 
