--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown"></h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Guarda corpo</p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Guarda-Corpo Escadas</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Saiba Mais</a>
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown"></h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Guarda-Corpo </p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Guarda-Corpo Piscinas</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Saiba Mais</a>
                             </div>
                         </div>
@@ -109,7 +109,7 @@
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-1 text-white animated slideInDown"></h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Guarda Corpo</p>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Portas de Correr</p>
                                 <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Saiba Mais</a>
                             </div>
                         </div>
